--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # 通信処理のライブラリ
+  http: ^0.13.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
