--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   # 通信処理のライブラリ
   http: ^0.13.2
 
-  json_annotation: ^4.0.1
+  # Null-safty対策でダウングレード
+  json_annotation: ^3.1.1
 
 dev_dependencies:
   flutter_test:
@@ -41,8 +42,9 @@ dev_dependencies:
 
   # JSON シリアライズ/デシリアライズ用のライブラリ
   # JSON の Generator がついているので楽かも
-  build_runner: ^2.0.1
-  json_serializable: ^4.1.1
+  # Null-safty対策でダウングレード
+  build_runner: ^1.10.9
+  json_serializable: ^3.5.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
